add the content in html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- link css -->
+     <link rel="stylesheet" href="./assets/style.css">
+
     <title>Document</title>
 </head>
 <body>
     
-
+    <div class="my_container">
+        <div>
+            <img id="light_on" class="lightOn" src="./assets/img/white_lamp.png" alt="">
+            <img id="light_off" class="lightOff" src="./assets/img/yellow_lamp.png" alt="">
+        </div>
+        <div>
+            <button id="button_light">
+                <h2>Accendi</h2>
+            </button>
+        </div>
+    </div>
     <!-- script js -->
     <script src="./assets/script.js"></script>
 </body>
