fix error in class and id name

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <div class="my_container">
         <div>
-            <img id="light_on" class="lightOn" src="./assets/img/white_lamp.png" alt="">
-            <img id="light_off" class="lightOff" src="./assets/img/yellow_lamp.png" alt="">
+            <img id="light_off" class="lightOff" src="./assets/img/white_lamp.png" alt="">
+            <img id="light_on" class="lightOn" src="./assets/img/yellow_lamp.png" alt="">
         </div>
         <div>
             <button id="button_light">
